fixed social links top bar + desktop optimizations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta name="author" content="EnFoco Media" />
     <meta name="robots" content="noindex, nofollow">
     <title>EnFoco Media</title>
+
+    <meta property="og:url"           content="http://www.enfocomedia.com" />
+    <meta property="og:type"          content="EnFoco Media" />
+    <meta property="og:description"   content="Your description" />
+    <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
+
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
@@ -16,13 +22,16 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 text-xs-center text-sm-left">
+          <div class="col-xs-12 text-xs-center text-sm-left col-md-6">
             <img src="images/enfoco-logo.svg" class="logo" onerror="this.src=images/enfoco-logo.png; this.onerror=null;" alt="EnFoco Logo">
           </div>
 
-          <div class="social-links hidden-xs-down">
+          <div class="social-links hidden-xs-down col-md-6">
             <ul>
-              <li><a href="#"></a></li>
+              <li><a href="#"><img src="images/icon-fb-white.svg"></a></li>
+              <li><a href="#"><img src="images/icon-twitter-white.svg"></a></li>
+              <li><a href="#"><img src="images/icon-instagram-white.svg"></a></li>
+              <li><a href="#"><img src="images/icon-linkedin-white.svg"></a></li>
             </ul>
           </div>
         </div>
@@ -34,11 +43,11 @@
       <section class="hero-unit">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 tagline">
+            <div class="col-md-5 tagline">
               <p class="lead">Confeccionamos <br>contenido digital <br><strong>a la medida</strong>.</p>
               <a href="#"><button class="btn btn-primary">Contáctenos</button></a>
             </div>
-            <div class="col-md-6 team">
+            <div class="col-md-7 team">
               <img src="images/team.svg" alt="Equipo EnFoco">
             </div>
           </div>
@@ -47,7 +56,9 @@
 
       <section class="intro container">
         <div class="row">
-         <p class="lead">Somos un grupo talentoso y dinámico con <strong>experiencias y conocimientos especializados</strong> que nos permiten trabajar juntos para crear, innovar y resolver. </p>
+          <div class="col-md-12">
+            <p class="lead">Somos un grupo talentoso y dinámico con <strong>experiencias y conocimientos especializados</strong> que nos permiten trabajar juntos para crear, innovar y resolver. </p>
+          </div>
         </div>
       </section>
 
@@ -56,6 +67,7 @@
           <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 generic">
             <h2>Servicios</h2>
             <p class="description">¿cómo podemos ayudarte?</p>
+            <hr>
 
             <div class="col-md-6">
               <ul>
@@ -72,9 +84,6 @@
               </ul>
             </div>
 
-            <div class="col-md-12">
-              <a href="#"><button class="btn btn-action">Ver Más</button></a>
-            </div>
           </div>
         </div>
       </section>
@@ -88,6 +97,7 @@
           <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 generic">
             <h2>Equipo</h2>
             <p class="description">¿quiénes somos?</p>
+            <hr>
 
             <div class="col-md-10 col-md-offset-1">
               <div class="team-member col-xs-6 col-md-3">
@@ -127,6 +137,7 @@
           <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 generic">
             <h2>Contacto</h2>
             <p class="description">¿conversamos?</p>
+            <hr>
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3869.522175413698!2d-87.19269296947381!3d14.105360841002778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6fa2dc30d579f7%3A0x247471c23e561cb8!2sConnect+Cowork!5e0!3m2!1sen!2shn!4v1470325251862" width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 
