--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
     <meta name="robots" content="noindex, nofollow">
     <title>EnFoco Media</title>
 
+    <!-- Facebook -->
     <meta property="og:url"           content="http://www.enfocomedia.com" />
     <meta property="og:type"          content="EnFoco Media" />
     <meta property="og:description"   content="Your description" />
     <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
 
+    <!-- Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ec134e">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
@@ -103,25 +113,25 @@
               <div class="team-member col-xs-6 col-md-3">
                 <img src="images/david.jpg">
                 <h5>David Nolasco</h5>
-                <p>Social Media Expert</p>
+                <p>Dirección y Estrategia</p>
               </div>
 
               <div class="team-member col-xs-6 col-md-3">
                 <img src="images/alicia.jpg">
                 <h5>Alicia Medina</h5>
-                <p>Social Media Expert</p>
+                <p>Diseño Gráfico</p>
               </div>
 
               <div class="team-member col-xs-6 col-md-3">
                 <img src="images/yamil.jpg">
                 <h5>Yamil Gonzales</h5>
-                <p>Social Media Expert</p>
+                <p>Diseño Interactivo</p>
               </div>
 
               <div class="team-member col-xs-6 col-md-3">
                 <img src="images/daniel.jpg">
                 <h5>Daniel Chinchilla</h5>
-                <p>Social Media Expert</p>
+                <p>Fotografía y Video</p>
               </div>
             </div>
           </div>
