added social media links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:description"   content="Your description" />
     <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -38,10 +41,10 @@
 
           <div class="social-links hidden-xs-down col-md-6">
             <ul>
-              <li><a href="#"><img src="images/icon-fb-white.svg"></a></li>
-              <li><a href="#"><img src="images/icon-twitter-white.svg"></a></li>
-              <li><a href="#"><img src="images/icon-instagram-white.svg"></a></li>
-              <li><a href="#"><img src="images/icon-linkedin-white.svg"></a></li>
+              <li><a href="https://www.facebook.com/enfocomedia/"><img src="images/icon-fb-white.svg"></a></li>
+              <li><a href="https://twitter.com/enfocomedia/"><img src="images/icon-twitter-white.svg"></a></li>
+              <li><a href="https://www.instagram.com/enfocomedia/"><img src="images/icon-instagram-white.svg"></a></li>
+              <li><a href="https://www.linkedin.com/company/enfoco-media/"><img src="images/icon-linkedin-white.svg"></a></li>
             </ul>
           </div>
         </div>
@@ -158,10 +161,10 @@
                 <li><a href="tel:+50489903999">+504 8990-3999</a></li>
                 <li class="social-links">
                   <ul>
-                    <li><a href="#"><img src="images/icon-fb-red.svg"></a></li>
-                    <li><a href="#"><img src="images/icon-twitter-red.svg"></a></li>
-                    <li><a href="#"><img src="images/icon-instagram-red.svg"></a></li>
-                    <li><a href="#"><img src="images/icon-linkedin-red.svg"></a></li>
+                    <li><a href="https://www.facebook.com/enfocomedia/"><img src="images/icon-fb-red.svg"></a></li>
+                    <li><a href="https://twitter.com/enfocomedia/"><img src="images/icon-twitter-red.svg"></a></li>
+                    <li><a href="https://www.instagram.com/enfocomedia/"><img src="images/icon-instagram-red.svg"></a></li>
+                    <li><a href="https://www.linkedin.com/company/enfoco-media/"><img src="images/icon-linkedin-red.svg"></a></li>
                   </ul>
                 </li>
               </ul>
