added google tag manager script

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <title>EnFoco Media</title>
 
     <!-- Facebook -->
-    <meta property="og:url"           content="http://www.enfocomedia.com" />
-    <meta property="og:type"          content="EnFoco Media" />
+    <meta property="og:url"           content="http://www.enfocomedia.com/" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="A Twitter for My Sister" />
     <meta property="og:description"   content="Your description" />
     <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card"         content="summary" />
+    <meta name="twitter:site"         content="@enfocomedia" />
+    <meta name="twitter:creator"      content="@enfocomedia" />
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -32,6 +35,17 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
+
+  <!-- Google Tag Manager -->
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-W5KMDJ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W5KMDJ');</script>
+  <!-- End Google Tag Manager -->
+
     <header>
       <div class="container">
         <div class="row">
