--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="key, word" />
     <meta name="author" content="EnFoco Media" />
     <meta name="robots" content="noindex, nofollow">
-    <title>EnFoco Media</title>
+    <title>EnFoco Media - Marketing digital a la medida</title>
 
     <!-- Facebook -->
     <meta property="og:url"           content="http://www.enfocomedia.com/" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="A Twitter for My Sister" />
-    <meta property="og:description"   content="Your description" />
+    <meta property="og:title"         content="EnFoco Media" />
+    <meta property="og:description"   content="Marketing digital a la medida" />
     <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
 
     <!-- Twitter -->
@@ -111,46 +111,6 @@
               </ul>
             </div>
 
-          </div>
-        </div>
-      </section>
-
-      <div class="divider">
-        <img src="images/separator.svg">
-      </div>
-
-      <section class="equipo container">
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 generic">
-            <h2>Equipo</h2>
-            <p class="description">¿quiénes somos?</p>
-            <hr>
-
-            <div class="col-md-10 col-md-offset-1">
-              <div class="team-member col-xs-6 col-md-3">
-                <img src="images/david.jpg">
-                <h5>David Nolasco</h5>
-                <p>Dirección y Estrategia</p>
-              </div>
-
-              <div class="team-member col-xs-6 col-md-3">
-                <img src="images/alicia.jpg">
-                <h5>Alicia Medina</h5>
-                <p>Diseño Gráfico</p>
-              </div>
-
-              <div class="team-member col-xs-6 col-md-3">
-                <img src="images/yamil.jpg">
-                <h5>Yamil Gonzales</h5>
-                <p>Diseño Interactivo</p>
-              </div>
-
-              <div class="team-member col-xs-6 col-md-3">
-                <img src="images/daniel.jpg">
-                <h5>Daniel Chinchilla</h5>
-                <p>Fotografía y Video</p>
-              </div>
-            </div>
           </div>
         </div>
       </section>
