added meta keywords
plus, removed some unused properties and updated copyright year

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Descripcion del documento" />
-    <meta name="keywords" content="key, word" />
+    <meta name="description" content="Marketing digital a la medida." />
+    <meta name="keywords" content="marketing, mercadeo, redes sociales, social media, facebook, twitter, instagram, honduras, expertos, community, management, publicaciones, social, publicidad, digital, manejo, internet, website, web, design, diseño, marcas" />
     <meta name="author" content="EnFoco Media" />
     <meta name="robots" content="noindex, nofollow">
     <title>EnFoco Media - Marketing digital a la medida</title>
@@ -15,7 +15,6 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="EnFoco Media" />
     <meta property="og:description"   content="Marketing digital a la medida" />
-    <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card"         content="summary" />
@@ -159,7 +158,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2016 EnFoco Media</p>
+      <p>&copy; 2017 EnFoco Media</p>
     </footer>
 
     <script>
